--- a/Rapidlaunch/Views/Home/Index.cshtml
+++ b/Rapidlaunch/Views/Home/Index.cshtml
@@ -1,8 +1,50 @@
-﻿@{
+﻿
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+                <div class="row">
+                    <div class="carousel slide" style="width: 500px; margin: 0 auto">
+                        <div class="col align-self-center">
+                            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-interval="4000">
+                                        <img class="d-block w-100" src="~/Assets/Launch1.jpg">
+                                    </div>
+                                    <div class="carousel-item" data-interval="4000">
+                                        <img class="d-block w-100" src="~/Assets/Launch2.jpg">
+                                    </div>
+                                    <div class="carousel-item" data-interval="4000">
+                                        <img class="d-block w-100" src="~/Assets/Launch3.jpg">
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src="Assets/Launch4.jpg">
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
