--- a/Rapidlaunch/wwwroot/css/site.css
+++ b/Rapidlaunch/wwwroot/css/site.css
@@ -46,11 +46,46 @@ body {
   margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
 }
+  .alink{
+
+            color:white;
+   }
+  .h5{
+      color:black;
+      text-align:center;
+        
+  }
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+    color: red;
+}
+thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit; 
+}
+tr:hover {
+    background-color: #ffff99;
+
+}
+body {
+    
+    background-image: url('../assets/wallpaper.jpg');
+}
+
+
+
