--- a/Rapidlaunch/Views/Shared/_Layout.cshtml
+++ b/Rapidlaunch/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-light box-shadows ">
+        <nav class="navbar sticky-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-light box-shadows ">
             <div class="container-fluid ">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <img src="~/Assets/RapidLaunchTester.PNG" , height="60" width="220" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -29,6 +29,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="nav nav-tabs">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Staff</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" asp-area="" asp-controller="Staffs" asp-action="Index">Staff </a>
+                                <a class="dropdown-item" asp-area="" asp-controller="StaffAddresses" asp-action="Index">Staff Addresses</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index">Staff Schedules</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="" asp-controller="StaffHomePage" asp-action="Index">Staff Home Page </a>
+                            </div>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Launch</a>
                             <div class="dropdown-menu">
@@ -42,23 +52,13 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Staff</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" asp-area="" asp-controller="Staffs" asp-action="Index">Staff </a>
-                                <a class="dropdown-item" asp-area="" asp-controller="StaffAddresses" asp-action="Index">Staff Addresses</a>
-                                <a class="dropdown-item" asp-area="" asp-controller="LaunchStaffSchedules" asp-action="Index">Staff Schedules</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-area="" asp-controller="StaffHomePage" asp-action="Index">Staff Home Page </a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Safety</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="SafetyRatings" asp-action="Index">Safety Ratings</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="StaffSafetyRecords" asp-action="Index">Staff Safety Records</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="RocketTypes" asp-action="Index">Rocket Types</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-area="" asp-controller="SafetyHomePage" asp-action="Index">Provider Home Page </a>
+                                <a class="dropdown-item" asp-area="" asp-controller="SafetyHomePage" asp-action="Index"> Safety Home Page </a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -69,7 +69,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Provider Addresses" asp-action="Index">Provider Address</a>
 
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" asp-area="" asp-controller="ProviderHomePage" asp-action="Index">Safety Home Page </a>
+                                <a class="dropdown-item" asp-area="" asp-controller="ProviderHomePage" asp-action="Index">Provider Home Page </a>
                             </div>
 
                         </li>
